--- a/l3trial/l3image/l3image.dtx
+++ b/l3trial/l3image/l3image.dtx
@@ -92,8 +92,8 @@
 %     \image_bb_restore:nF, \image_bb_restore:xF
 %   }
 %   \begin{syntax}
-%     \cs{image_bb_save:n} \meta{image}
-%     \cs{image_bb_restore:nF} \meta{image} \meta{false code}
+%     \cs{image_bb_save:n} \Arg{image}
+%     \cs{image_bb_restore:nF} \Arg{image} \Arg{false code}
 %   \end{syntax}
 %   This pair of functions are used to cache the bounding box of an \meta{image}
 %   so that extraction/reading is only required once. The \texttt{save}
@@ -120,7 +120,7 @@
 %
 % \begin{function}{\image_extract_bb:n}
 %   \begin{syntax}
-%     \cs{image_extract_bb:n} \meta{file}
+%     \cs{image_extract_bb:n} \Arg{file}
 %   \end{syntax}
 %   Extracts bounding box data for the image \meta{file} using the |extractbb|
 %   utility, and stores the bounding box of the image file in
@@ -143,7 +143,7 @@
 %
 % \begin{function}{\image_read_bb:n}
 %   \begin{syntax}
-%     \cs{image_read_bb:n} \meta{file}
+%     \cs{image_read_bb:n} \Arg{file}
 %   \end{syntax}
 %   Parses the image \meta{file} to find a PostScript-style bounding box
 %   line of the form
