Use a common driver box in pdfmode
Internal box


Mumble

--- a/l3kernel/l3drivers-basics.dtx
+++ b/l3kernel/l3drivers-basics.dtx
@@ -117,6 +117,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\l_@@_internal_box}
+%   A scratch box.
+%    \begin{macrocode}
+\box_new:N \l_@@_internal_box
+%    \end{macrocode}
+% \end{variable}
+%
 % \subsection{\texttt{dvips} driver}
 %
 %    \begin{macrocode}
