--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -182,10 +182,10 @@
       \tl_if_empty:NF \l_image_pagebox_tl
         { \l_image_pagebox_tl }
       {#1}
-    \hbox_set:Nn \l_@@_tmp_box
+    \hbox_set:Nn \l_@@_internal_box
       { \tex_pdfrefximage:D \tex_pdflastximage:D }
-    \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_tmp_box }
-    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_tmp_box }
+    \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_internal_box }
+    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
     \int_const:cn { c_@@_image_ #1 \l_@@_image_attr_tl _int }
       { \tex_the:D \tex_pdflastximage:D }
     \image_bb_save:x { #1 \l_@@_image_attr_tl }
@@ -432,9 +432,9 @@
   }
 \cs_new_protected:Npn \@@_image_getbb_auxvi:nNnn #1#2#3#4
   {
-    \hbox_set:Nn \l_@@_tmp_box { #2 #1 ~ #4 }
-    \dim_set:Nn \l_image_utx_dim { \box_wd:N \l_@@_tmp_box }
-    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_tmp_box }
+    \hbox_set:Nn \l_@@_internal_box { #2 #1 ~ #4 }
+    \dim_set:Nn \l_image_utx_dim { \box_wd:N \l_@@_internal_box }
+    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
     \image_bb_save:n {#1#3}
   }
 \cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
