--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -265,7 +265,7 @@
 %   }
 %  \begin{macro}{\@@_image_include_auxi:nn}
 %  \begin{macro}{\@@_image_include_auxii:nnn, \@@_image_include_auxii:xnn}
-%  \begin{macro}{\@@_image_include_auxiii:nn}
+%  \begin{macro}{\@@_image_include_auxiii:nnn}
 %   The special syntax depends on the file type. There is a difference in
 %   how PDF images are best handled between |dvipdfmx| and |xdvipdfmx|: for
 %   the latter it is better to use the primitive route. The relevant code for
@@ -317,7 +317,7 @@
         \@@_literal:x
           { pdf:usexobj~@image \int_use:c { c_@@_image_ #2#1 _int } }
       }
-      { \@@_image_include_auxiii:nn {#2} {#1} {#3} }
+      { \@@_image_include_auxiii:nnn {#2} {#1} {#3} }
   }
 \cs_generate_variant:Nn \@@_image_include_auxii:nnn { x }
 %    \end{macrocode}
