Delay some set up to \AtBeginDocument

--- a/l3kernel/l3drivers-image.dtx
+++ b/l3kernel/l3drivers-image.dtx
@@ -69,7 +69,13 @@
 % \begin{macro}{\driver_image_getbb_eps:n}
 %   Simply use the generic function.
 %    \begin{macrocode}
-\cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n
+%<*initex>
+\use:n
+%</initex>
+%<*package>
+\AtBeginDocument
+%</package>
+  { \cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -236,7 +242,13 @@
 %   Simply use the generic functions: only for \texttt{dvipdfmx} in the
 %   extraction cases.
 %    \begin{macrocode}
-\cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n
+%<*initex>
+\use:n
+%</initex>
+%<*package>
+\AtBeginDocument
+%</package>
+  { \cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n }
 %<*dvipdfmx>
 \cs_new_protected:Npn \driver_image_getbb_jpg:n #1
   {
@@ -493,8 +505,16 @@
 % \begin{macro}{\driver_image_getbb_png:n, \driver_image_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
-\cs_new_eq:NN \driver_image_getbb_png:n \image_extract_bb:n
-\cs_new_eq:NN \driver_image_getbb_jpg:n \image_extract_bb:n
+%<*initex>
+\use:n
+%</initex>
+%<*package>
+\AtBeginDocument
+%</package>
+  {
+    \cs_new_eq:NN \driver_image_getbb_png:n \image_extract_bb:n
+    \cs_new_eq:NN \driver_image_getbb_jpg:n \image_extract_bb:n
+  }
 %    \end{macrocode}
 % \end{macro}
 %
