--- a/l3experimental/l3image/l3image.dtx
+++ b/l3experimental/l3image/l3image.dtx
@@ -331,7 +331,7 @@
 \cs_new_protected:Npn \@@_extract_bb_auxiv:nnn #1#2#3
   {
     \@@_read_bb_auxi:nnnn {#1} {#2}
-      { \tex_openin:D \l_@@_tmp_ior = "|extractbb~#3-O~#1" }
+      { \tex_immediate:D \tex_openin:D \l_@@_tmp_ior = "|extractbb~#3-O~#1" ~ }
       { pipe-failed }
   }
 \cs_new_protected:Npn \image_read_bb:n #1
@@ -358,7 +358,6 @@
   }
 \cs_new_protected:Npx \@@_read_bb_auxii:nnnn #1#2#3#4
   {
-    #3
     \exp_not:N \ior_if_eof:NTF \exp_not:N \l_@@_tmp_ior
       { \__kernel_msg_error:nnn { image } {#2} {#3} }
       {
