Added experimental \ior_shell_open:Nn
Muible

--- a/l3experimental/l3image/l3image.dtx
+++ b/l3experimental/l3image/l3image.dtx
@@ -331,7 +331,7 @@
 \cs_new_protected:Npn \@@_extract_bb_auxiv:nnn #1#2#3
   {
     \@@_read_bb_auxi:nnnn {#1} {#2}
-      { \tex_immediate:D \tex_openin:D \l_@@_tmp_ior = "|extractbb~#3-O~#1" ~ }
+      { \ior_shell_open:Nn \l_@@_tmp_ior { extractbb~#3-O~#1 } }
       { pipe-failed }
   }
 \cs_new_protected:Npn \image_read_bb:n #1
