Set image box to size of image
This is needed for \special-based images,
not in pdfTeX/LuaTeX.

--- a/l3experimental/l3image/l3image.dtx
+++ b/l3experimental/l3image/l3image.dtx
@@ -527,6 +527,8 @@
               \l_@@_name_tl
           }
         \box_set_dp:Nn \l_@@_internal_box { 0pt }
+        \box_set_ht:Nn \l_@@_internal_box { \l_image_ury_dim - \l_image_lly_dim }
+        \box_set_wd:Nn \l_@@_internal_box { \l_image_urx_dim - \l_image_llx_dim }
         \box_use_drop:N \l_@@_internal_box
       }
       { \__kernel_msg_error:nnn { image } { unsupported-image-type } {#1} }
