Allow for .tex files in image inclusion

--- a/l3experimental/l3image/l3image.dtx
+++ b/l3experimental/l3image/l3image.dtx
@@ -494,30 +494,58 @@
 % \end{variable}
 %
 % \begin{macro}{\image_include:n}
+% \begin{macro}{\@@_include_search:n}
 % \begin{macro}{\@@_include:}
 % \begin{macro}{\image_include:nn}
 % \begin{macro}{\@@_include:n}
 %   Actually including an image is relatively straight-forward: most of the
 %   work is done by the driver. We only have to deal with making sure the
 %   box has no apparent depth. Where the first given name is not found, we
-%   search based on extension only if the \meta{type} was not given.
+%   search based on extension only if the \meta{type} was not given. The one
+%   wrinkle is that we may have found a \texttt{.tex} file matching the file
+%   name stem: that's not what we want, so we have to filter out.
 %    \begin{macrocode}
 \cs_new_protected:Npn \image_include:n #1
   {
     \group_begin:
       \seq_set_eq:NN \l_file_search_path_seq \l_image_search_path_seq
       \file_get_full_name:nNTF {#1} \l_@@_name_tl
-        { \@@_include: }
         {
-          \seq_map_inline:Nn \l_image_search_ext_seq
+          \use:x
             {
-              \file_get_full_name:nNT { #1 . ##1 } \l_@@_name_tl
-                { \seq_map_break:n { \use_i:nnn \@@_include: } }
+              \cs_set_protected:Npn \@@_include_check:w
+                ####1 #1 \tl_to_str:n { .tex }
+                ####2 #1 \tl_to_str:n { .tex }
+                ####3
+                \exp_not:N \q_stop
             }
-          \use:n
-            { \__kernel_msg_error:nnn { image } { image-not-found } {#1} }
+            {
+              \tl_if_blank:nTF {##3}
+                { \@@_include_search:n {#1} }
+                { \@@_include: }
+            }
+          \use:x
+            {
+              \@@_include_check:w
+                \l_@@_name_tl
+                #1 \tl_to_str:n { .tex }
+                #1 \tl_to_str:n { .tex }
+                \exp_not:N \q_stop
+            }
         }
+        { \@@_include_search:n {#1} }
     \group_end:
+  }
+\cs_new_protected:Npn \@@_include_check:w { }
+\cs_new_protected:Npn \@@_include_search:n #1
+  {
+    \seq_map_inline:Nn \l_image_search_ext_seq
+      {
+        \file_get_full_name:nNT { #1 . ##1 } \l_@@_name_tl
+          { \seq_map_break:n { \use_i:nnn \@@_include: } }
+      }
+    \use:n
+      { \__kernel_msg_error:nnn { image } { image-not-found } {#1} }
   }
 \cs_new_protected:Npn \@@_include:
   {
@@ -563,6 +591,7 @@
       { \__kernel_msg_error:nnn { image } { unsupported-image-type } {#1} }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
