Fold image type case

--- a/l3experimental/l3image/l3image.dtx
+++ b/l3experimental/l3image/l3image.dtx
@@ -497,7 +497,7 @@
 % \begin{macro}{\@@_include_search:n}
 % \begin{macro}{\@@_include:}
 % \begin{macro}{\image_include:nn}
-% \begin{macro}{\@@_include:n}
+% \begin{macro}{\@@_include:n, \@@_include_aux:n}
 %   Actually including an image is relatively straight-forward: most of the
 %   work is done by the driver. We only have to deal with making sure the
 %   box has no apparent depth. Where the first given name is not found, we
@@ -564,6 +564,8 @@
     \group_end:
   }
 \cs_new_protected:Npn \@@_include:n #1
+  { \exp_args:Ne \@@_include_aux:n { \str_fold_case:n {#1} } }
+\cs_new_protected:Npn \@@_include_aux:n #1
   {
     \mode_leave_vertical:
     \cs_if_exist:cTF { driver_image_include_ #1 :n }
