Feeling is for l3graphics rather than l3image

--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3image.dtx Copyright(C) 2017-2019 The LaTeX3 Project
+%% File: l3graphics.dtx Copyright(C) 2017-2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -32,7 +32,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3image} package\\ Image inclusion support^^A
+%   The \pkg{l3graphics} package\\ Image inclusion support^^A
 % }
 %
 % \author{^^A
@@ -50,7 +50,7 @@
 %
 % \begin{documentation}
 %
-% \section{\pkg{l3image} documentation}
+% \section{\pkg{l3graphics} documentation}
 %
 % \subsection{Driver functions}
 %
@@ -58,29 +58,29 @@
 % the driver layer. These functions are primarily aimed at supporting this
 % work.
 %
-% \begin{variable}{\l_image_decodearray_tl}
+% \begin{variable}{\l_graphics_decodearray_tl}
 %   Array to decode color in bitmap image: when non-empty, this should
 %   be in the form of one, two or three pairs of real numbers in the range
 %   $[0,1]$, separated by spaces.
 % \end{variable}
 %
-% \begin{variable}{\l_image_interpolate_bool}
+% \begin{variable}{\l_graphics_interpolate_bool}
 %   Indicates whether interpolation should be applied to bitmap image files.
 % \end{variable}
 %
-% \begin{variable}{\l_image_page_int}
+% \begin{variable}{\l_graphics_page_int}
 %   The page to extract from a multi-page image file: used for |.pdf| files
 %   which may contain multiple pages.
 % \end{variable}
 %
-% \begin{variable}{\l_image_pagebox_tl}
+% \begin{variable}{\l_graphics_pagebox_tl}
 %   The nature of the page box setting used to determine the bounding box of
 %   material: used for |.pdf| files which feature multiple page box
 %   specifications.
 % \end{variable}
 %
 % \begin{variable}
-%   {\l_image_llx_dim, \l_image_lly_dim, \l_image_urx_dim, \l_image_ury_dim}
+%   {\l_graphics_llx_dim, \l_graphics_lly_dim, \l_graphics_urx_dim, \l_graphics_ury_dim}
 %   Dimensions which return the points $(\meta{llx},\meta{lly})$ and
 %   $(\meta{urx},\meta{ury})$ for the image. For many images only the resulting
 %   height and width are significant, but this is driver-dependent.
@@ -88,8 +88,8 @@
 %
 % \begin{function}
 %   {
-%     \image_bb_save:n, \image_bb_save:x,
-%     \image_bb_restore:nF, \image_bb_restore:xF
+%     \graphics_bb_save:n, \graphics_bb_save:x,
+%     \graphics_bb_restore:nF, \graphics_bb_restore:xF
 %   }
 %   \begin{syntax}
 %     \cs{image_bb_save:n} \Arg{image}
@@ -97,18 +97,18 @@
 %   \end{syntax}
 %   This pair of functions are used to cache the bounding box of an \meta{image}
 %   so that extraction/reading is only required once. The \texttt{save}
-%   function stores the values from \cs{l_image_llx_dim},
-%   \cs{l_image_lly_dim}, \cs{l_image_urx_dim} and
-%   \cs{l_image_ury_dim} as constants. The \texttt{restore} function will then
+%   function stores the values from \cs{l_graphics_llx_dim},
+%   \cs{l_graphics_lly_dim}, \cs{l_graphics_urx_dim} and
+%   \cs{l_graphics_ury_dim} as constants. The \texttt{restore} function will then
 %   look up values for the bounding box of an \meta{image} and set the four
 %   dimensions appropriately. For any one \meta{image} the bounding box will
 %   be constant, so the \texttt{save} function should only be called once. Thus
 %   a typical use case is
 %   \begin{verbatim}
-%   \image_bb_restore:nF { <name> }
+%   \graphics_bb_restore:nF { <name> }
 %     {
 %       % Code to read the bb
-%       \image_bb_save:n { <name> }
+%       \graphics_bb_save:n { <name> }
 %     }
 %   \end{verbatim}
 %   \emph{i.e.}~every use of a bounding box will attempt to restore saved data,
@@ -118,14 +118,14 @@
 %   for example, will need to have the bounding box cached for each page used.
 % \end{function}
 %
-% \begin{function}{\image_extract_bb:n}
+% \begin{function}{\graphics_extract_bb:n}
 %   \begin{syntax}
 %     \cs{image_extract_bb:n} \Arg{file}
 %   \end{syntax}
 %   Extracts bounding box data for the image \meta{file} using the |extractbb|
 %   utility, and stores the bounding box of the image file in
-%   \cs{l_image_llx_dim}, \cs{l_image_lly_dim}, \cs{l_image_urx_dim} and
-%   \cs{l_image_ury_dim}.
+%   \cs{l_graphics_llx_dim}, \cs{l_graphics_lly_dim}, \cs{l_graphics_urx_dim} and
+%   \cs{l_graphics_ury_dim}.
 %
 %   The \meta{file} name should be fully-qualified and sanitized: no search
 %   or other manipulation is carried out at this level. No check is made on
@@ -133,7 +133,7 @@
 %   using this function has made such a check. File types such as |.pdf| and
 %   |.jpg| are appropriate for parsing using this function.
 %
-%   When \cs{l_image_page_int} is positive the appropriate page will be
+%   When \cs{l_graphics_page_int} is positive the appropriate page will be
 %   queried from the image file.
 %
 %   Note that this function requires pipe shell calls to be enabled: this is
@@ -141,7 +141,7 @@
 %   when running the \TeX{} job.
 % \end{function}
 %
-% \begin{function}{\image_read_bb:n}
+% \begin{function}{\graphics_read_bb:n}
 %   \begin{syntax}
 %     \cs{image_read_bb:n} \Arg{file}
 %   \end{syntax}
@@ -152,8 +152,8 @@
 %   \end{verbatim}
 %   where \meta{llx}, \meta{lly}, \meta{urx} and \meta{ury} are the corners
 %   of the bounding box expressed in PostScript (\enquote{big}) points. The
-%   values are stored in \cs{l_image_llx_dim}, \cs{l_image_lly_dim},
-%   \cs{l_image_urx_dim} and \cs{l_image_ury_dim}.
+%   values are stored in \cs{l_graphics_llx_dim}, \cs{l_graphics_lly_dim},
+%   \cs{l_graphics_urx_dim} and \cs{l_graphics_ury_dim}.
 %
 %   The \meta{file} name should be fully-qualified and sanitized: no search
 %   or other manipulation is carried out at this level. No check is made on
@@ -162,7 +162,7 @@
 %   |.bb|/|.xbb| are appropriate for parsing using this function.
 % \end{function}
 %
-% \begin{function}{\image_include:n, \image_include:nn}
+% \begin{function}{\graphics_include:n, \graphics_include:nn}
 %   \begin{syntax}
 %     \cs{image_include:n} \Arg{file}
 %     \cs{image_include:nn} \Arg{file} \Arg{type}
@@ -175,15 +175,15 @@
 %
 %   Where the \meta{file} is not found and the \meta{type} is \emph{not}
 %   given, a search for possible image files is undertaken using the extensions
-%   stored in \cs{l_image_search_ext_seq}.
+%   stored in \cs{l_graphics_search_ext_seq}.
 % \end{function}
 %
-% \begin{variable}{\l_image_extensions_seq}
+% \begin{variable}{\l_graphics_extensions_seq}
 %   Extensions to use for image searching when the given \meta{file} name is not
 %   found by \cs{image_include:n}.
 % \end{variable}
 %
-% \begin{variable}{\l_image_search_path_seq}
+% \begin{variable}{\l_graphics_search_path_seq}
 %   Each entry is the path to a directory which should be searched when
 %   seeking an image file. Each path can be relative or absolute, and should
 %   not include the trailing slash. The entries are not expanded when
@@ -191,7 +191,7 @@
 %   variable content. Spaces need not be quoted.
 % \end{variable}
 %
-% \begin{function}{\image_show_list:, \image_log_list:}
+% \begin{function}{\graphics_show_list:, \graphics_log_list:}
 %   \begin{syntax}
 %     \cs{image_show_list:}
 %     \cs{image_log_list:}
@@ -200,14 +200,14 @@
 %   \cs{file_show_list:} and \cs{file_log_list:}. While
 %   \cs{image_show_list:} displays the list in the terminal,
 %   \cs{image_log_list:} outputs it to the log file only. In both cases, only
-%   images loaded by \pkg{l3image} are listed.
+%   images loaded by \pkg{l3graphics} are listed.
 % \end{function}
 %
 % \end{documentation}
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3image} implementation}
+% \section{\pkg{l3graphics} implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
@@ -219,7 +219,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3image}{2018-04-30}{}
+\ProvidesExplPackage{l3graphics}{2018-04-30}{}
   {L3 Experimental image inclusion support}
 %</package>
 %    \end{macrocode}
@@ -236,20 +236,20 @@
 %
 % \begin{macro}
 %   {
-%     \l_image_decodearray_tl  ,
-%     \l_image_interpolate_bool,
-%     \l_image_page_int        ,
-%     \l_image_pagebox_tl
+%     \l_graphics_decodearray_tl  ,
+%     \l_graphics_interpolate_bool,
+%     \l_graphics_page_int        ,
+%     \l_graphics_pagebox_tl
 %   }
 %   Keys which control features of images. The standard value of |pagebox|
 %   set up here should match the default for the drivers themselves: in
 %   the absence of any other setting the |cropbox| should be used.
 %    \begin{macrocode}
-\tl_new:N \l_image_decodearray_tl 
-\tl_new:N \l_image_pagebox_tl
-\bool_new:N \l_image_interpolate_bool
-\tl_set:Nn \l_image_pagebox_tl { cropbox }
-\int_new:N \l_image_page_int
+\tl_new:N \l_graphics_decodearray_tl 
+\tl_new:N \l_graphics_pagebox_tl
+\bool_new:N \l_graphics_interpolate_bool
+\tl_set:Nn \l_graphics_pagebox_tl { cropbox }
+\int_new:N \l_graphics_page_int
 %    \end{macrocode}
 % \end{macro}
 %
@@ -257,60 +257,60 @@
 %
 % \begin{variable}
 %   {
-%     \l_image_llx_dim , \l_image_lly_dim,
-%     \l_image_urx_dim , \l_image_ury_dim
+%     \l_graphics_llx_dim , \l_graphics_lly_dim,
+%     \l_graphics_urx_dim , \l_graphics_ury_dim
 %   } 
 %   Storage for the return of bounding box.
 %    \begin{macrocode}
-\dim_new:N \l_image_llx_dim
-\dim_new:N \l_image_lly_dim
-\dim_new:N \l_image_urx_dim
-\dim_new:N \l_image_ury_dim
+\dim_new:N \l_graphics_llx_dim
+\dim_new:N \l_graphics_lly_dim
+\dim_new:N \l_graphics_urx_dim
+\dim_new:N \l_graphics_ury_dim
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\image_bb_save:n, \image_bb_save:x}
-% \begin{macro}{\image_bb_restore:nF, \image_bb_restore:xF}
+% \begin{macro}{\graphics_bb_save:n, \graphics_bb_save:x}
+% \begin{macro}{\graphics_bb_restore:nF, \graphics_bb_restore:xF}
 %   Caching image bounding boxes is sensible, and these functions are needed both
 %   here and for drive-specific work. So they are made available as documented
 %   functions. To save on registers, the \enquote{origin} is only saved if it is
 %   not at zero.
 %     \begin{macrocode}
-\cs_new_protected:Npn \image_bb_save:n #1
+\cs_new_protected:Npn \graphics_bb_save:n #1
   {
     \dim_if_exist:cTF { c_@@_ #1 _urx_dim }
       { \__kernel_msg_error:nnn { image } { bb-already-cached } {#1} }
       {
-        \dim_compare:nNnF \l_image_llx_dim = { 0pt }
-          { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_image_llx_dim } }
-        \dim_compare:nNnF \l_image_lly_dim = { 0pt }
-          { \dim_const:cn { c_@@_ #1 _lly_dim } { \l_image_lly_dim } }
-        \dim_const:cn { c_@@_ #1 _urx_dim } { \l_image_urx_dim }
-        \dim_const:cn { c_@@_ #1 _ury_dim } { \l_image_ury_dim }
+        \dim_compare:nNnF \l_graphics_llx_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_graphics_llx_dim } }
+        \dim_compare:nNnF \l_graphics_lly_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #1 _lly_dim } { \l_graphics_lly_dim } }
+        \dim_const:cn { c_@@_ #1 _urx_dim } { \l_graphics_urx_dim }
+        \dim_const:cn { c_@@_ #1 _ury_dim } { \l_graphics_ury_dim }
       }
   }
-\cs_generate_variant:Nn \image_bb_save:n { x }
-\cs_new_protected:Npn \image_bb_restore:nF #1#2
+\cs_generate_variant:Nn \graphics_bb_save:n { x }
+\cs_new_protected:Npn \graphics_bb_restore:nF #1#2
   {
     \dim_if_exist:cTF { c_@@_ #1 _urx_dim }
       {
-        \dim_set_eq:Nc \l_image_urx_dim { c_@@_ #1 _urx_dim }
-        \dim_set_eq:Nc \l_image_ury_dim { c_@@_ #1 _ury_dim }
+        \dim_set_eq:Nc \l_graphics_urx_dim { c_@@_ #1 _urx_dim }
+        \dim_set_eq:Nc \l_graphics_ury_dim { c_@@_ #1 _ury_dim }
         \dim_if_exist:cTF { c_@@_ #1 _llx_dim }
-          { \dim_set_eq:Nc \l_image_llx_dim { c_@@_ #1 _llx_dim } }
-          { \dim_zero:N \l_image_urx_dim }
+          { \dim_set_eq:Nc \l_graphics_llx_dim { c_@@_ #1 _llx_dim } }
+          { \dim_zero:N \l_graphics_urx_dim }
         \dim_if_exist:cTF { c_@@_ #1 _lly_dim }
-          { \dim_set_eq:Nc \l_image_lly_dim { c_@@_ #1 _lly_dim } }
-          { \dim_zero:N \l_image_lly_dim }
+          { \dim_set_eq:Nc \l_graphics_lly_dim { c_@@_ #1 _lly_dim } }
+          { \dim_zero:N \l_graphics_lly_dim }
       }
       {#2}
   }
-\cs_generate_variant:Nn \image_bb_restore:nF { x }
+\cs_generate_variant:Nn \graphics_bb_restore:nF { x }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\image_extract_bb:n, \image_read_bb:n}
+% \begin{macro}{\graphics_extract_bb:n, \graphics_read_bb:n}
 % \begin{macro}{\@@_extract_bb_auix:nn, \@@_extract_bb_auix:Vn}
 % \begin{macro}{\@@_extract_bb_auxii:nnn}
 % \begin{macro}{\@@_extract_bb_auxiii:nnnn, \@@_extract_bb_auxiii:Vnnn}
@@ -330,10 +330,10 @@
 %  box has to be calculated by |extractbb|, with just the initial phase
 %  different.
 %    \begin{macrocode}
-\cs_new_protected:Npn \image_extract_bb:n #1
+\cs_new_protected:Npn \graphics_extract_bb:n #1
   {
-    \int_compare:nNnTF \l_image_page_int > 0
-      { \@@_extract_bb_auxi:Vn \l_image_page_int {#1} }
+    \int_compare:nNnTF \l_graphics_page_int > 0
+      { \@@_extract_bb_auxi:Vn \l_graphics_page_int {#1} }
       { \@@_extract_bb_auxii:nnn {#1} { } { } }
   }
 \cs_new_protected:Npn \@@_extract_bb_auxi:nn #1#2
@@ -341,9 +341,9 @@
 \cs_generate_variant:Nn \@@_extract_bb_auxi:nn { Vn }
 \cs_new_protected:Npn \@@_extract_bb_auxii:nnn #1#2#3
   {
-   \tl_if_empty:NTF \l_image_pagebox_tl
+   \tl_if_empty:NTF \l_graphics_pagebox_tl
       { \@@_extract_bb_auxiv:nnn }
-      { \@@_extract_bb_auxiii:Vnnn \l_image_pagebox_tl }
+      { \@@_extract_bb_auxiii:Vnnn \l_graphics_pagebox_tl }
       {#1} {#2} {#3}
   }
 \cs_new_protected:Npn \@@_extract_bb_auxiii:nnnn #1#2#3#4
@@ -355,7 +355,7 @@
       { \ior_shell_open:Nn \l_@@_tmp_ior { extractbb~#3-O~#1 } }
       { pipe-failed }
   }
-\cs_new_protected:Npn \image_read_bb:n #1
+\cs_new_protected:Npn \graphics_read_bb:n #1
   {
     \@@_read_bb_auxi:nnnn {#1} { }
       { \ior_open:Nn \l_@@_tmp_ior {#1} }
@@ -374,7 +374,7 @@
 %   \begin{macrocode}
 \cs_new_protected:Npn \@@_read_bb_auxi:nnnn #1#2#3#4
   {
-    \image_bb_restore:nF {#1#2}
+    \graphics_bb_restore:nF {#1#2}
       { \@@_read_bb_auxii:nnnn {#3} {#4} {#1} {#2} }
   }
 \cs_new_protected:Npx \@@_read_bb_auxii:nnnn #1#2#3#4
@@ -392,12 +392,12 @@
     \exp_not:n
       {
         \ior_close:N \l_@@_tmp_ior
-        \dim_compare:nNnF \l_image_llx_dim = { 0pt }
-          { \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l_image_llx_dim } }
-        \dim_compare:nNnF \l_image_lly_dim = { 0pt }
-          { \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l_image_lly_dim } }
-        \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l_image_urx_dim }
-        \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l_image_ury_dim }
+        \dim_compare:nNnF \l_graphics_llx_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #3#4 _llx_dim } { \l_graphics_llx_dim } }
+        \dim_compare:nNnF \l_graphics_lly_dim = { 0pt }
+          { \dim_const:cn { c_@@_ #3#4 _lly_dim } { \l_graphics_lly_dim } }
+        \dim_const:cn { c_@@_ #3#4 _urx_dim } { \l_graphics_urx_dim }
+        \dim_const:cn { c_@@_ #3#4 _ury_dim } { \l_graphics_ury_dim }
       }
   }
 \use:x
@@ -438,10 +438,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_read_bb_auxv:w #1~#2~#3~#4~#5 \q_stop
   {
-    \dim_set:Nn \l_image_llx_dim { #1 bp }
-    \dim_set:Nn \l_image_lly_dim { #2 bp }
-    \dim_set:Nn \l_image_urx_dim { #3 bp }
-    \dim_set:Nn \l_image_ury_dim { #4 bp }
+    \dim_set:Nn \l_graphics_llx_dim { #1 bp }
+    \dim_set:Nn \l_graphics_lly_dim { #2 bp }
+    \dim_set:Nn \l_graphics_urx_dim { #3 bp }
+    \dim_set:Nn \l_graphics_ury_dim { #4 bp }
     \ior_map_break:
   }
 %    \end{macrocode}
@@ -473,16 +473,16 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_image_search_path_seq}
+% \begin{variable}{\l_graphics_search_path_seq}
 %    \begin{macrocode}
-\seq_new:N \l_image_search_path_seq
+\seq_new:N \l_graphics_search_path_seq
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_image_search_ext_seq}
+% \begin{variable}{\l_graphics_search_ext_seq}
 %   Used to specify fall-back extensions: actually set on a per-driver basis.
 %    \begin{macrocode}
-\seq_new:N \l_image_search_ext_seq
+\seq_new:N \l_graphics_search_ext_seq
 %    \end{macrocode}
 % \end{variable}
 %
@@ -493,10 +493,10 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\image_include:n}
+% \begin{macro}{\graphics_include:n}
 % \begin{macro}{\@@_include_search:n}
 % \begin{macro}{\@@_include:}
-% \begin{macro}{\image_include:nn}
+% \begin{macro}{\graphics_include:nn}
 % \begin{macro}{\@@_include:n, \@@_include_aux:n}
 %   Actually including an image is relatively straight-forward: most of the
 %   work is done by the driver. We only have to deal with making sure the
@@ -505,10 +505,10 @@
 %   wrinkle is that we may have found a \texttt{.tex} file matching the file
 %   name stem: that's not what we want, so we have to filter out.
 %    \begin{macrocode}
-\cs_new_protected:Npn \image_include:n #1
+\cs_new_protected:Npn \graphics_include:n #1
   {
     \group_begin:
-      \seq_set_eq:NN \l_file_search_path_seq \l_image_search_path_seq
+      \seq_set_eq:NN \l_file_search_path_seq \l_graphics_search_path_seq
       \file_get_full_name:nNTF {#1} \l_@@_name_tl
         {
           \str_if_eq:eeTF { \l_@@_name_tl } { #1 .tex }
@@ -520,7 +520,7 @@
   }
 \cs_new_protected:Npn \@@_include_search:n #1
   {
-    \seq_map_inline:Nn \l_image_search_ext_seq
+    \seq_map_inline:Nn \l_graphics_search_ext_seq
       {
         \file_get_full_name:nNT { #1 . ##1 } \l_@@_name_tl
           { \seq_map_break:n { \use_i:nnn \@@_include: } }
@@ -535,10 +535,10 @@
     \exp_args:Nx \@@_include:n
       { \str_tail:N \l_@@_ext_str }
   }
-\cs_new_protected:Npn \image_include:nn #1#2
+\cs_new_protected:Npn \graphics_include:nn #1#2
   {
     \group_begin:
-      \seq_set_eq:NN \l_file_search_path_seq \l_image_search_path_seq
+      \seq_set_eq:NN \l_file_search_path_seq \l_graphics_search_path_seq
       \file_get_full_name:nNTF {#1} \l_@@_name_tl
         { \@@_include:n {#2} }
         { \__kernel_msg_error:nnn { image } { image-not-found } {#1} }
@@ -549,9 +549,9 @@
 \cs_new_protected:Npn \@@_include_aux:n #1
   {
     \mode_leave_vertical:
-    \cs_if_exist:cTF { driver_image_include_ #1 :n }
+    \cs_if_exist:cTF { driver_graphics_include_ #1 :n }
       {
-        \exp_args:NnV \use:c { driver_image_getbb_ #1 :n }
+        \exp_args:NnV \use:c { driver_graphics_getbb_ #1 :n }
           \l_@@_name_tl
 %<*initex>
         \seq_gput_right:NV \g_@@_record_seq \l_@@_name_tl
@@ -563,12 +563,14 @@
 %</package>
         \hbox_set:Nn \l_@@_internal_box
           {
-            \exp_args:NnV \use:c { driver_image_include_ #1 :n }
+            \exp_args:NnV \use:c { driver_graphics_include_ #1 :n }
               \l_@@_name_tl
           }
         \box_set_dp:Nn \l_@@_internal_box { 0pt }
-        \box_set_ht:Nn \l_@@_internal_box { \l_image_ury_dim - \l_image_lly_dim }
-        \box_set_wd:Nn \l_@@_internal_box { \l_image_urx_dim - \l_image_llx_dim }
+        \box_set_ht:Nn \l_@@_internal_box
+          { \l_graphics_ury_dim - \l_graphics_lly_dim }
+        \box_set_wd:Nn \l_@@_internal_box
+          { \l_graphics_urx_dim - \l_graphics_llx_dim }
         \box_use_drop:N \l_@@_internal_box
       }
       { \__kernel_msg_error:nnn { image } { unsupported-image-type } {#1} }
@@ -580,12 +582,12 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\image_show_list:, \image_log_list:, \@@_list:N}
+% \begin{macro}{\graphics_show_list:, \graphics_log_list:, \@@_list:N}
 % \begin{macro}[EXP]{\@@_list_aux:n}
 %   A function to list all image files used.
 %    \begin{macrocode}
-\cs_new_protected:Npn \image_show_list: { \@@_list:N \msg_show:nnxxxx }
-\cs_new_protected:Npn \image_log_list: { \@@_list:N \msg_log:nnxxxx }
+\cs_new_protected:Npn \graphics_show_list: { \@@_list:N \msg_show:nnxxxx }
+\cs_new_protected:Npn \graphics_log_list: { \@@_list:N \msg_log:nnxxxx }
 \cs_new_protected:Npn \@@_list:N #1
   {
     \seq_remove_duplicates:N \g_@@_record_seq
