--- a/l3kernel/l3drivers-graphics.dtx
+++ b/l3kernel/l3drivers-graphics.dtx
@@ -1,8 +1,8 @@
 % \iffalse meta-comment
 %
-%% File: l3drivers-image.dtx
+%% File: l3drivers-graphics.dtx
 %
-% Copyright (C) 2011-2019 The LaTeX3 Project
+% Copyright (C) 2019 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -31,7 +31,7 @@
 % \fi
 %
 % \title{^^A
-%   The \textsf{l3drivers-image} package\\ Driver image support^^A
+%   The \textsf{l3drivers-graphics} package\\ Driver graphics support^^A
 % }
 %
 % \author{^^A
@@ -53,7 +53,7 @@
 %
 % \begin{implementation}
 %
-% \section{\pkg{l3drivers-image} Implementation}
+% \section{\pkg{l3drivers-graphics} Implementation}
 %
 %    \begin{macrocode}
 %<*initex|package>
@@ -66,7 +66,7 @@
 %<*dvips>
 %    \end{macrocode}
 %
-% \begin{macro}{\driver_image_getbb_eps:n}
+% \begin{macro}{\driver_graphics_getbb_eps:n}
 %   Simply use the generic function.
 %    \begin{macrocode}
 %<*initex>
@@ -75,15 +75,15 @@
 %<*package>
 \AtBeginDocument
 %</package>
-  { \cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n }
+  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \image_read_bb:n }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_image_include_eps:n}
+% \begin{macro}{\driver_graphics_include_eps:n}
 %  The special syntax is relatively clear here: remember we need PostScript
 %  sizes here.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_include_eps:n #1
+\cs_new_protected:Npn \driver_graphics_include_eps:n #1
   {
     \@@_literal:x
       {
@@ -107,7 +107,7 @@
 %<*pdfmode>
 %    \end{macrocode}
 %
-% \begin{variable}{\l_@@_image_attr_tl}
+% \begin{variable}{\l_@@_graphics_attr_tl}
 %   In PDF mode, additional attributes of an image (such as page number) are
 %   needed both to obtain the bounding box and when inserting the image: this
 %   occurs as the image dictionary approach means they are read as part of
@@ -115,18 +115,18 @@
 %   attributes using a dedicated |tl| rather than build up the same data
 %   twice.
 %    \begin{macrocode}
-\tl_new:N \l_@@_image_attr_tl
+\tl_new:N \l_@@_graphics_attr_tl
 %    \end{macrocode}
 % \end{variable}
 %
 % \begin{macro}
 %   {
-%     \driver_image_getbb_jpg:n,
-%     \driver_image_getbb_pdf:n,
-%     \driver_image_getbb_png:n
+%     \driver_graphics_getbb_jpg:n,
+%     \driver_graphics_getbb_pdf:n,
+%     \driver_graphics_getbb_png:n
 %   }
 % \begin{macro}
-%   {\@@_image_getbb_auxi:n, \@@_image_getbb_auxii:n}
+%   {\@@_graphics_getbb_auxi:n, \@@_graphics_getbb_auxii:n}
 %   Getting the bounding box here requires us to box up the image and
 %   measure it. To deal with the difference in feature support in bitmap
 %   and vector images but keeping the common parts, there is a little work
@@ -134,37 +134,37 @@
 %   two forms of the attributes: a \enquote{short} set to allow us to
 %   track for caching, and the full form to pass to the primitive.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_getbb_jpg:n #1
+\cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
     \int_zero:N \l_image_page_int
     \tl_clear:N \l_image_pagebox_tl
-    \tl_set:Nx \l_@@_image_attr_tl
+    \tl_set:Nx \l_@@_graphics_attr_tl
       {
         \tl_if_empty:NF \l_image_decodearray_tl
           { :D \l_image_decodearray_tl }
         \bool_if:NT \l_image_interpolate_bool
           { :I }
       }
-    \tl_clear:N \l_@@_image_attr_tl
-    \@@_image_getbb_auxi:n {#1}
+    \tl_clear:N \l_@@_graphics_attr_tl
+    \@@_graphics_getbb_auxi:n {#1}
   }
-\cs_new_eq:NN \driver_image_getbb_png:n \driver_image_getbb_jpg:n
-\cs_new_protected:Npn \driver_image_getbb_pdf:n #1
+\cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
+\cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
     \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
-    \tl_set:Nx \l_@@_image_attr_tl
+    \tl_set:Nx \l_@@_graphics_attr_tl
       {
         : \l_image_pagebox_tl
         \int_compare:nNnT \l_image_page_int > 1
           { :P \int_use:N \l_image_page_int }
       }
-    \@@_image_getbb_auxi:n {#1}
+    \@@_graphics_getbb_auxi:n {#1}
   }
-\cs_new_protected:Npn \@@_image_getbb_auxi:n #1
+\cs_new_protected:Npn \@@_graphics_getbb_auxi:n #1
   {
-    \image_bb_restore:xF { #1 \l_@@_image_attr_tl }
-      { \@@_image_getbb_auxii:n {#1} }
+    \image_bb_restore:xF { #1 \l_@@_graphics_attr_tl }
+      { \@@_graphics_getbb_auxii:n {#1} }
   }
 %    \begin{macrocode}
 %   Measuring the image is done by boxing up: for PDF images we could
@@ -172,7 +172,7 @@
 %   As the box always starts at $(0,0)$ there is no need to worry about
 %   the lower-left position.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_getbb_auxii:n #1
+\cs_new_protected:Npn \@@_graphics_getbb_auxii:n #1
   {
     \tex_immediate:D \tex_pdfximage:D
       \bool_lazy_or:nnT
@@ -196,9 +196,9 @@
       { \tex_pdfrefximage:D \tex_pdflastximage:D }
     \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_internal_box }
     \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
-    \int_const:cn { c_@@_image_ #1 \l_@@_image_attr_tl _int }
+    \int_const:cn { c_@@_graphics_ #1 \l_@@_graphics_attr_tl _int }
       { \tex_the:D \tex_pdflastximage:D }
-    \image_bb_save:x { #1 \l_@@_image_attr_tl }
+    \image_bb_save:x { #1 \l_@@_graphics_attr_tl }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -206,21 +206,21 @@
 %
 % \begin{macro}
 %   {
-%     \driver_image_include_jpg:n,
-%     \driver_image_include_pdf:n,
-%     \driver_image_include_png:n
+%     \driver_graphics_include_jpg:n,
+%     \driver_graphics_include_pdf:n,
+%     \driver_graphics_include_png:n
 %   }
 %   Images are already loaded for the measurement part of the code, so
 %   inclusion is straight-forward, with only any attributes to worry about. The
 %   latter carry through from determination of the bounding box.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_include_jpg:n #1
+\cs_new_protected:Npn \driver_graphics_include_jpg:n #1
   {
     \tex_pdfrefximage:D
-      \int_use:c { c_@@_image_ #1 \l_@@_image_attr_tl _int }
+      \int_use:c { c_@@_graphics_ #1 \l_@@_graphics_attr_tl _int }
   }
-\cs_new_eq:NN \driver_image_include_pdf:n \driver_image_include_jpg:n
-\cs_new_eq:NN \driver_image_include_png:n \driver_image_include_jpg:n
+\cs_new_eq:NN \driver_graphics_include_pdf:n \driver_graphics_include_jpg:n
+\cs_new_eq:NN \driver_graphics_include_png:n \driver_graphics_include_jpg:n
 %    \end{macrocode}
 % \end{macro}
 %
@@ -236,8 +236,8 @@
 %
 % \begin{macro}
 %   {
-%     \driver_image_getbb_eps:n, \driver_image_getbb_jpg:n,
-%     \driver_image_getbb_pdf:n, \driver_image_getbb_png:n
+%     \driver_graphics_getbb_eps:n, \driver_graphics_getbb_jpg:n,
+%     \driver_graphics_getbb_pdf:n, \driver_graphics_getbb_png:n
 %   }
 %   Simply use the generic functions: only for \texttt{dvipdfmx} in the
 %   extraction cases.
@@ -248,16 +248,16 @@
 %<*package>
 \AtBeginDocument
 %</package>
-  { \cs_new_eq:NN \driver_image_getbb_eps:n \image_read_bb:n }
+  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \image_read_bb:n }
 %<*dvipdfmx>
-\cs_new_protected:Npn \driver_image_getbb_jpg:n #1
+\cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
     \int_zero:N \l_image_page_int
     \tl_clear:N \l_image_pagebox_tl
     \image_extract_bb:n {#1}
   }
-\cs_new_eq:NN \driver_image_getbb_png:n \driver_image_getbb_jpg:n
-\cs_new_protected:Npn \driver_image_getbb_pdf:n #1
+\cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
+\cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
     \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
@@ -267,27 +267,27 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\g_@@_image_int}
+% \begin{variable}{\g_@@_graphics_int}
 %   Used to track the object number associated with each image.
 %    \begin{macrocode}
-\int_new:N \g_@@_image_int
+\int_new:N \g_@@_graphics_int
 %    \end{macrocode}
 % \end{variable}
 %
 % \begin{macro}
 %   {
-%     \driver_image_include_eps:n, \driver_image_include_jpg:n,
-%     \driver_image_include_pdf:n, \driver_image_include_png:n
+%     \driver_graphics_include_eps:n, \driver_graphics_include_jpg:n,
+%     \driver_graphics_include_pdf:n, \driver_graphics_include_png:n
 %   }
-%  \begin{macro}{\@@_image_include_auxi:nn}
-%  \begin{macro}{\@@_image_include_auxii:nnn, \@@_image_include_auxii:xnn}
-%  \begin{macro}{\@@_image_include_auxiii:nnn}
+%  \begin{macro}{\@@_graphics_include_auxi:nn}
+%  \begin{macro}{\@@_graphics_include_auxii:nnn, \@@_graphics_include_auxii:xnn}
+%  \begin{macro}{\@@_graphics_include_auxiii:nnn}
 %   The special syntax depends on the file type. There is a difference in
 %   how PDF images are best handled between |dvipdfmx| and |xdvipdfmx|: for
 %   the latter it is better to use the primitive route. The relevant code for
 %   that is included later in this file.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_include_eps:n #1
+\cs_new_protected:Npn \driver_graphics_include_eps:n #1
   {
     \@@_literal:x
       {
@@ -298,12 +298,12 @@
         ury = \dim_to_decimal_in_bp:n \l_image_ury_dim
       }
   }
-\cs_new_protected:Npn \driver_image_include_jpg:n #1
-  { \@@_image_include_auxi:nn {#1} { image } }
-\cs_new_eq:NN \driver_image_include_png:n \driver_image_include_jpg:n
+\cs_new_protected:Npn \driver_graphics_include_jpg:n #1
+  { \@@_graphics_include_auxi:nn {#1} { image } }
+\cs_new_eq:NN \driver_graphics_include_png:n \driver_graphics_include_jpg:n
 %<*dvipdfmx>
-\cs_new_protected:Npn \driver_image_include_pdf:n #1
-  { \@@_image_include_auxi:nn {#1} { epdf } }
+\cs_new_protected:Npn \driver_graphics_include_pdf:n #1
+  { \@@_graphics_include_auxi:nn {#1} { epdf } }
 %</dvipdfmx>
 %    \end{macrocode}
 %   Image inclusion is set up to use the fact that each image is stored in
@@ -311,9 +311,9 @@
 %   only once and refer to them. To allow that, track the nature of each
 %   image: much the same as for the direct PDF mode case.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_auxi:nn #1#2
+\cs_new_protected:Npn \@@_graphics_include_auxi:nn #1#2
   {
-    \@@_image_include_auxii:xnn
+    \@@_graphics_include_auxii:xnn
       {
         \tl_if_empty:NF \l_image_pagebox_tl
           { : \l_image_pagebox_tl }
@@ -326,30 +326,30 @@
       }
       {#1} {#2}
   }
-\cs_new_protected:Npn \@@_image_include_auxii:nnn #1#2#3
+\cs_new_protected:Npn \@@_graphics_include_auxii:nnn #1#2#3
   {
-    \int_if_exist:cTF { c_@@_image_ #2#1 _int }
+    \int_if_exist:cTF { c_@@_graphics_ #2#1 _int }
       {
         \@@_literal:x
-          { pdf:usexobj~@image \int_use:c { c_@@_image_ #2#1 _int } }
+          { pdf:usexobj~@image \int_use:c { c_@@_graphics_ #2#1 _int } }
       }
-      { \@@_image_include_auxiii:nnn {#2} {#1} {#3} }
+      { \@@_graphics_include_auxiii:nnn {#2} {#1} {#3} }
   }
-\cs_generate_variant:Nn \@@_image_include_auxii:nnn { x }
+\cs_generate_variant:Nn \@@_graphics_include_auxii:nnn { x }
 %    \end{macrocode}
 %  Inclusion using the specials is relatively straight-forward, but there
 %  is one wrinkle. To get the |pagebox| correct for PDF images in all cases,
 %  it is necessary to provide both that information and the |bbox| argument:
 %  odd things happen otherwise!
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_image_include_auxiii:nnn #1#2#3
+\cs_new_protected:Npn \@@_graphics_include_auxiii:nnn #1#2#3
   {
-    \int_gincr:N \g_@@_image_int
-    \int_const:cn { c_@@_image_ #1#2 _int } { \g_@@_image_int }
+    \int_gincr:N \g_@@_graphics_int
+    \int_const:cn { c_@@_graphics_ #1#2 _int } { \g_@@_graphics_int }
     \@@_literal:x
       {
         pdf:#3~
-        @image \int_use:c { c_@@_image_ #1#2 _int } ~
+        @image \int_use:c { c_@@_graphics_ #1#2 _int } ~
         \int_compare:nNnT \l_image_page_int > 1
           { page ~ \int_use:N \l_image_page_int \c_space_tl }
         \tl_if_empty:NF \l_image_pagebox_tl
@@ -395,73 +395,73 @@
 %
 % \begin{macro}
 %   {
-%     \driver_image_getbb_jpg:n,
-%     \driver_image_getbb_pdf:n,
-%     \driver_image_getbb_png:n
+%     \driver_graphics_getbb_jpg:n,
+%     \driver_graphics_getbb_pdf:n,
+%     \driver_graphics_getbb_png:n
 %   }
-% \begin{macro}{\@@_image_getbb_auxi:nN}
-% \begin{macro}{\@@_image_getbb_auxii:nnN, \@@_image_getbb_auxii:VnN}
-% \begin{macro}{\@@_image_getbb_auxiii:nNnn}
-% \begin{macro}{\@@_image_getbb_auxiv:nnNnn, \@@_image_getbb_auxiv:VnNnn}
-% \begin{macro}{\@@_image_getbb_auxv:nNnn, \@@_image_getbb_auxv:nNnn}
-% \begin{macro}[EXP]{\@@_image_getbb_pagebox:w}
+% \begin{macro}{\@@_graphics_getbb_auxi:nN}
+% \begin{macro}{\@@_graphics_getbb_auxii:nnN, \@@_graphics_getbb_auxii:VnN}
+% \begin{macro}{\@@_graphics_getbb_auxiii:nNnn}
+% \begin{macro}{\@@_graphics_getbb_auxiv:nnNnn, \@@_graphics_getbb_auxiv:VnNnn}
+% \begin{macro}{\@@_graphics_getbb_auxv:nNnn, \@@_graphics_getbb_auxv:nNnn}
+% \begin{macro}[EXP]{\@@_graphics_getbb_pagebox:w}
 %   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
 %   the bounding box without needing \texttt{extractbb}. The only complexity
 %   is passing the various minor variations to a common core process. The
 %   \XeTeX{} primitive omits the text |box| from the page box specification,
 %   so there is also some \enquote{trimming} to do here.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_getbb_jpg:n #1
+\cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
     \int_zero:N \l_image_page_int
     \tl_clear:N \l_image_pagebox_tl
-    \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpicfile:D
+    \@@_graphics_getbb_auxi:nN {#1} \tex_XeTeXpicfile:D
   }
-\cs_new_eq:NN \driver_image_getbb_png:n \driver_image_getbb_jpg:n
-\cs_new_protected:Npn \driver_image_getbb_pdf:n #1
+\cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
+\cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
     \tl_clear:N \l_image_decodearray_tl
     \bool_set_false:N \l_image_interpolate_bool
-    \@@_image_getbb_auxi:nN {#1} \tex_XeTeXpdffile:D
+    \@@_graphics_getbb_auxi:nN {#1} \tex_XeTeXpdffile:D
   }
-\cs_new_protected:Npn \@@_image_getbb_auxi:nN #1#2
+\cs_new_protected:Npn \@@_graphics_getbb_auxi:nN #1#2
   {
     \int_compare:nNnTF \l_image_page_int > 1
-      { \@@_image_getbb_auxii:VnN \l_image_page_int {#1} #2  }
-      { \@@_image_getbb_auxiii:nNnn {#1} #2 { :P 1 } { page 1 } }
+      { \@@_graphics_getbb_auxii:VnN \l_image_page_int {#1} #2  }
+      { \@@_graphics_getbb_auxiii:nNnn {#1} #2 { :P 1 } { page 1 } }
   }
-\cs_new_protected:Npn \@@_image_getbb_auxii:nnN #1#2#3
-  { \@@_image_getbb_auxiii:nNnn {#2} #3 { :P #1 } { page #1 } }
-\cs_generate_variant:Nn \@@_image_getbb_auxii:nnN { V }
-\cs_new_protected:Npn \@@_image_getbb_auxiii:nNnn #1#2#3#4
+\cs_new_protected:Npn \@@_graphics_getbb_auxii:nnN #1#2#3
+  { \@@_graphics_getbb_auxiii:nNnn {#2} #3 { :P #1 } { page #1 } }
+\cs_generate_variant:Nn \@@_graphics_getbb_auxii:nnN { V }
+\cs_new_protected:Npn \@@_graphics_getbb_auxiii:nNnn #1#2#3#4
   {
     \tl_if_empty:NTF \l_image_pagebox_tl
-      { \@@_image_getbb_auxiv:VnNnn \l_image_pagebox_tl }
-      { \@@_image_getbb_auxv:nNnn }
+      { \@@_graphics_getbb_auxiv:VnNnn \l_image_pagebox_tl }
+      { \@@_graphics_getbb_auxv:nNnn }
       {#1} #2 {#3} {#4}
   }
-\cs_new_protected:Npn \@@_image_getbb_auxiv:nnNnn #1#2#3#4#5
+\cs_new_protected:Npn \@@_graphics_getbb_auxiv:nnNnn #1#2#3#4#5
   {
     \use:x
       {
-        \@@_image_getbb_auxv:nNnn {#2} #3 { : #1 #4 }
-          { #5 ~ \@@_image_getbb_pagebox:w #1 }
+        \@@_graphics_getbb_auxv:nNnn {#2} #3 { : #1 #4 }
+          { #5 ~ \@@_graphics_getbb_pagebox:w #1 }
       }
   }
-\cs_generate_variant:Nn \@@_image_getbb_auxiv:nnNnn { V }
-\cs_new_protected:Npn \@@_image_getbb_auxv:nNnn #1#2#3#4
+\cs_generate_variant:Nn \@@_graphics_getbb_auxiv:nnNnn { V }
+\cs_new_protected:Npn \@@_graphics_getbb_auxv:nNnn #1#2#3#4
   {
     \image_bb_restore:nF {#1#3}
-      { \@@_image_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
+      { \@@_graphics_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
   }
-\cs_new_protected:Npn \@@_image_getbb_auxvi:nNnn #1#2#3#4
+\cs_new_protected:Npn \@@_graphics_getbb_auxvi:nNnn #1#2#3#4
   {
     \hbox_set:Nn \l_@@_internal_box { #2 #1 ~ #4 }
     \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_internal_box }
     \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
     \image_bb_save:n {#1#3}
   }
-\cs_new:Npn \@@_image_getbb_pagebox:w #1 box {#1}
+\cs_new:Npn \@@_graphics_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -471,22 +471,22 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_image_include_pdf:n}
-% \begin{macro}{\@@_image_include_bitmap_quote:w}
+% \begin{macro}{\driver_graphics_include_pdf:n}
+% \begin{macro}{\@@_graphics_include_bitmap_quote:w}
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
 %   is best done using the |\tex_XeTeXpdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
 %   stage that there must be some valid setting for \cs{l_image_pagebox_tl}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_include_pdf:n #1
+\cs_new_protected:Npn \driver_graphics_include_pdf:n #1
   {
     \tex_XeTeXpdffile:D
-      \@@_image_include_pdf_quote:w #1 "#1" \q_stop \c_space_tl
+      \@@_graphics_include_pdf_quote:w #1 "#1" \q_stop \c_space_tl
       \int_compare:nNnT \l_image_page_int > 0
         { page ~ \int_use:N \l_image_page_int \c_space_tl }
-        \exp_after:wN \@@_image_getbb_pagebox:w \l_image_pagebox_tl
+        \exp_after:wN \@@_graphics_getbb_pagebox:w \l_image_pagebox_tl
   }
-\cs_new:Npn \@@_image_include_pdf_quote:w #1 " #2 " #3 \q_stop
+\cs_new:Npn \@@_graphics_include_pdf_quote:w #1 " #2 " #3 \q_stop
   { " #2 " }
 %    \end{macrocode}
 % \end{macro}
@@ -502,7 +502,7 @@
 %<*dvisvgm>
 %    \end{macrocode}
 %
-% \begin{macro}{\driver_image_getbb_png:n, \driver_image_getbb_jpg:n}
+% \begin{macro}{\driver_graphics_getbb_png:n, \driver_graphics_getbb_jpg:n}
 %   These can be included by extracting the bounding box data.
 %    \begin{macrocode}
 %<*initex>
@@ -512,14 +512,14 @@
 \AtBeginDocument
 %</package>
   {
-    \cs_new_eq:NN \driver_image_getbb_png:n \image_extract_bb:n
-    \cs_new_eq:NN \driver_image_getbb_jpg:n \image_extract_bb:n
+    \cs_new_eq:NN \driver_graphics_getbb_png:n \image_extract_bb:n
+    \cs_new_eq:NN \driver_graphics_getbb_jpg:n \image_extract_bb:n
   }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\driver_image_include_png:n, \driver_image_include_jpg:n}
-% \begin{macro}{\@@_image_include_bitmap_quote:w}
+% \begin{macro}{\driver_graphics_include_png:n, \driver_graphics_include_jpg:n}
+% \begin{macro}{\@@_graphics_include_bitmap_quote:w}
 %   The driver here has built-in support for basic image inclusion (see
 %   \texttt{dvisvgm.def} for a more complex approach, needed if clipping,
 %   \emph{etc.}, is covered at the image driver level). The only issue is
@@ -527,18 +527,18 @@
 %   quotes the file name, but if it is already quoted (contains spaces)
 %   then we have an issue: we simply strip off any quotes as a result.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_image_include_png:n #1
+\cs_new_protected:Npn \driver_graphics_include_png:n #1
   {
      \@@_literal:x
        {
          dvisvgm:img~
          \dim_to_decimal:n { \l_image_ury_dim } ~
          \dim_to_decimal:n { \l_image_ury_dim } ~
-         \@@_image_include_bitmap_quote:w #1 " #1 " \q_stop
+         \@@_graphics_include_bitmap_quote:w #1 " #1 " \q_stop
        }
   }
-\cs_new_eq:NN \driver_image_include_jpg:n \driver_image_include_png:n
-\cs_new:Npn \@@_image_include_bitmap_quote:w #1 " #2 " #3 \q_stop
+\cs_new_eq:NN \driver_graphics_include_jpg:n \driver_graphics_include_png:n
+\cs_new:Npn \@@_graphics_include_bitmap_quote:w #1 " #2 " #3 \q_stop
   { " #2 " }
 %    \end{macrocode}
 % \end{macro}
