--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -491,7 +491,7 @@ used on top of \LaTeXe{} if \cs{outer} tokens are used in the arguments.
     l3drivers-color.dtx ,
     l3drivers-box.dtx ,
     l3drivers-draw.dtx ,
-    l3drivers-image.dtx ,
+    l3drivers-graphics.dtx ,
     l3drivers-pdf.dtx
   }
 \ExplSyntaxOff
