--- a/l3kernel/l3drivers-graphics.dtx
+++ b/l3kernel/l3drivers-graphics.dtx
@@ -88,10 +88,10 @@
     \@@_literal:x
       {
         PSfile = #1 \c_space_tl
-        llx = \dim_to_decimal_in_bp:n \l_image_llx_dim \c_space_tl
-        lly = \dim_to_decimal_in_bp:n \l_image_lly_dim \c_space_tl
-        urx = \dim_to_decimal_in_bp:n \l_image_urx_dim \c_space_tl
-        ury = \dim_to_decimal_in_bp:n \l_image_ury_dim
+        llx = \dim_to_decimal_in_bp:n \l_graphics_llx_dim \c_space_tl
+        lly = \dim_to_decimal_in_bp:n \l_graphics_lly_dim \c_space_tl
+        urx = \dim_to_decimal_in_bp:n \l_graphics_urx_dim \c_space_tl
+        ury = \dim_to_decimal_in_bp:n \l_graphics_ury_dim
       }
   }
 %    \end{macrocode}
@@ -136,13 +136,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
-    \int_zero:N \l_image_page_int
-    \tl_clear:N \l_image_pagebox_tl
+    \int_zero:N \l_graphics_page_int
+    \tl_clear:N \l_graphics_pagebox_tl
     \tl_set:Nx \l_@@_graphics_attr_tl
       {
-        \tl_if_empty:NF \l_image_decodearray_tl
-          { :D \l_image_decodearray_tl }
-        \bool_if:NT \l_image_interpolate_bool
+        \tl_if_empty:NF \l_graphics_decodearray_tl
+          { :D \l_graphics_decodearray_tl }
+        \bool_if:NT \l_graphics_interpolate_bool
           { :I }
       }
     \tl_clear:N \l_@@_graphics_attr_tl
@@ -151,13 +151,13 @@
 \cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
 \cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decodearray_tl
-    \bool_set_false:N \l_image_interpolate_bool
+    \tl_clear:N \l_graphics_decodearray_tl
+    \bool_set_false:N \l_graphics_interpolate_bool
     \tl_set:Nx \l_@@_graphics_attr_tl
       {
-        : \l_image_pagebox_tl
-        \int_compare:nNnT \l_image_page_int > 1
-          { :P \int_use:N \l_image_page_int }
+        : \l_graphics_pagebox_tl
+        \int_compare:nNnT \l_graphics_page_int > 1
+          { :P \int_use:N \l_graphics_page_int }
       }
     \@@_graphics_getbb_auxi:n {#1}
   }
@@ -176,26 +176,26 @@
   {
     \tex_immediate:D \tex_pdfximage:D
       \bool_lazy_or:nnT
-        { \l_image_interpolate_bool }
-        { ! \tl_if_empty_p:N \l_image_decodearray_tl }
+        { \l_graphics_interpolate_bool }
+        { ! \tl_if_empty_p:N \l_graphics_decodearray_tl }
         {
           attr ~
             {
-              \tl_if_empty:NF \l_image_decodearray_tl
-                { /Decode~[ \l_image_decodearray_tl ] }
-              \bool_if:NT \l_image_interpolate_bool
+              \tl_if_empty:NF \l_graphics_decodearray_tl
+                { /Decode~[ \l_graphics_decodearray_tl ] }
+              \bool_if:NT \l_graphics_interpolate_bool
                 { /Interpolate~true }
             }
         }
-      \int_compare:nNnT \l_image_page_int > 0
-        { page ~ \int_use:N \l_image_page_int }
-      \tl_if_empty:NF \l_image_pagebox_tl
-        { \l_image_pagebox_tl }
+      \int_compare:nNnT \l_graphics_page_int > 0
+        { page ~ \int_use:N \l_graphics_page_int }
+      \tl_if_empty:NF \l_graphics_pagebox_tl
+        { \l_graphics_pagebox_tl }
       {#1}
     \hbox_set:Nn \l_@@_internal_box
       { \tex_pdfrefximage:D \tex_pdflastximage:D }
-    \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_internal_box }
-    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
+    \dim_set:Nn \l_graphics_urx_dim { \box_wd:N \l_@@_internal_box }
+    \dim_set:Nn \l_graphics_ury_dim { \box_ht:N \l_@@_internal_box }
     \int_const:cn { c_@@_graphics_ #1 \l_@@_graphics_attr_tl _int }
       { \tex_the:D \tex_pdflastximage:D }
     \image_bb_save:x { #1 \l_@@_graphics_attr_tl }
@@ -252,15 +252,15 @@
 %<*dvipdfmx>
 \cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
-    \int_zero:N \l_image_page_int
-    \tl_clear:N \l_image_pagebox_tl
+    \int_zero:N \l_graphics_page_int
+    \tl_clear:N \l_graphics_pagebox_tl
     \image_extract_bb:n {#1}
   }
 \cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
 \cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decodearray_tl
-    \bool_set_false:N \l_image_interpolate_bool
+    \tl_clear:N \l_graphics_decodearray_tl
+    \bool_set_false:N \l_graphics_interpolate_bool
     \image_extract_bb:n {#1}
   }
 %</dvipdfmx>
@@ -292,10 +292,10 @@
     \@@_literal:x
       {
         PSfile = #1 \c_space_tl
-        llx = \dim_to_decimal_in_bp:n \l_image_llx_dim \c_space_tl
-        lly = \dim_to_decimal_in_bp:n \l_image_lly_dim \c_space_tl
-        urx = \dim_to_decimal_in_bp:n \l_image_urx_dim \c_space_tl
-        ury = \dim_to_decimal_in_bp:n \l_image_ury_dim
+        llx = \dim_to_decimal_in_bp:n \l_graphics_llx_dim \c_space_tl
+        lly = \dim_to_decimal_in_bp:n \l_graphics_lly_dim \c_space_tl
+        urx = \dim_to_decimal_in_bp:n \l_graphics_urx_dim \c_space_tl
+        ury = \dim_to_decimal_in_bp:n \l_graphics_ury_dim
       }
   }
 \cs_new_protected:Npn \driver_graphics_include_jpg:n #1
@@ -315,13 +315,13 @@
   {
     \@@_graphics_include_auxii:xnn
       {
-        \tl_if_empty:NF \l_image_pagebox_tl
-          { : \l_image_pagebox_tl }
-        \int_compare:nNnT \l_image_page_int > 1
-          { :P \int_use:N \l_image_page_int }
-        \tl_if_empty:NF \l_image_decodearray_tl
-          { :D \l_image_decodearray_tl }
-        \bool_if:NT \l_image_interpolate_bool
+        \tl_if_empty:NF \l_graphics_pagebox_tl
+          { : \l_graphics_pagebox_tl }
+        \int_compare:nNnT \l_graphics_page_int > 1
+          { :P \int_use:N \l_graphics_page_int }
+        \tl_if_empty:NF \l_graphics_decodearray_tl
+          { :D \l_graphics_decodearray_tl }
+        \bool_if:NT \l_graphics_interpolate_bool
            { :I }
       }
       {#1} {#2}
@@ -350,26 +350,26 @@
       {
         pdf:#3~
         @image \int_use:c { c_@@_graphics_ #1#2 _int } ~
-        \int_compare:nNnT \l_image_page_int > 1
-          { page ~ \int_use:N \l_image_page_int \c_space_tl }
-        \tl_if_empty:NF \l_image_pagebox_tl
+        \int_compare:nNnT \l_graphics_page_int > 1
+          { page ~ \int_use:N \l_graphics_page_int \c_space_tl }
+        \tl_if_empty:NF \l_graphics_pagebox_tl
           {
-            pagebox ~ \l_image_pagebox_tl \c_space_tl
+            pagebox ~ \l_graphics_pagebox_tl \c_space_tl
             bbox ~
-              \dim_to_decimal_in_bp:n \l_image_llx_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l_image_lly_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l_image_urx_dim \c_space_tl
-              \dim_to_decimal_in_bp:n \l_image_ury_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_graphics_llx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_graphics_lly_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_graphics_urx_dim \c_space_tl
+              \dim_to_decimal_in_bp:n \l_graphics_ury_dim \c_space_tl
           }
         (#1)
         \bool_lazy_or:nnT
-          { \l_image_interpolate_bool }
-          { ! \tl_if_empty_p:N \l_image_decodearray_tl }
+          { \l_graphics_interpolate_bool }
+          { ! \tl_if_empty_p:N \l_graphics_decodearray_tl }
           {
             <<
-              \tl_if_empty:NF \l_image_decodearray_tl
-                { /Decode~[ \l_image_decodearray_tl ] }
-              \bool_if:NT \l_image_interpolate_bool
+              \tl_if_empty:NF \l_graphics_decodearray_tl
+                { /Decode~[ \l_graphics_decodearray_tl ] }
+              \bool_if:NT \l_graphics_interpolate_bool
                 { /Interpolate~true> }
             >>
           }
@@ -413,21 +413,21 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
-    \int_zero:N \l_image_page_int
-    \tl_clear:N \l_image_pagebox_tl
+    \int_zero:N \l_graphics_page_int
+    \tl_clear:N \l_graphics_pagebox_tl
     \@@_graphics_getbb_auxi:nN {#1} \tex_XeTeXpicfile:D
   }
 \cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
 \cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
-    \tl_clear:N \l_image_decodearray_tl
-    \bool_set_false:N \l_image_interpolate_bool
+    \tl_clear:N \l_graphics_decodearray_tl
+    \bool_set_false:N \l_graphics_interpolate_bool
     \@@_graphics_getbb_auxi:nN {#1} \tex_XeTeXpdffile:D
   }
 \cs_new_protected:Npn \@@_graphics_getbb_auxi:nN #1#2
   {
-    \int_compare:nNnTF \l_image_page_int > 1
-      { \@@_graphics_getbb_auxii:VnN \l_image_page_int {#1} #2  }
+    \int_compare:nNnTF \l_graphics_page_int > 1
+      { \@@_graphics_getbb_auxii:VnN \l_graphics_page_int {#1} #2  }
       { \@@_graphics_getbb_auxiii:nNnn {#1} #2 { :P 1 } { page 1 } }
   }
 \cs_new_protected:Npn \@@_graphics_getbb_auxii:nnN #1#2#3
@@ -435,8 +435,8 @@
 \cs_generate_variant:Nn \@@_graphics_getbb_auxii:nnN { V }
 \cs_new_protected:Npn \@@_graphics_getbb_auxiii:nNnn #1#2#3#4
   {
-    \tl_if_empty:NTF \l_image_pagebox_tl
-      { \@@_graphics_getbb_auxiv:VnNnn \l_image_pagebox_tl }
+    \tl_if_empty:NTF \l_graphics_pagebox_tl
+      { \@@_graphics_getbb_auxiv:VnNnn \l_graphics_pagebox_tl }
       { \@@_graphics_getbb_auxv:nNnn }
       {#1} #2 {#3} {#4}
   }
@@ -457,8 +457,8 @@
 \cs_new_protected:Npn \@@_graphics_getbb_auxvi:nNnn #1#2#3#4
   {
     \hbox_set:Nn \l_@@_internal_box { #2 #1 ~ #4 }
-    \dim_set:Nn \l_image_urx_dim { \box_wd:N \l_@@_internal_box }
-    \dim_set:Nn \l_image_ury_dim { \box_ht:N \l_@@_internal_box }
+    \dim_set:Nn \l_graphics_urx_dim { \box_wd:N \l_@@_internal_box }
+    \dim_set:Nn \l_graphics_ury_dim { \box_ht:N \l_@@_internal_box }
     \image_bb_save:n {#1#3}
   }
 \cs_new:Npn \@@_graphics_getbb_pagebox:w #1 box {#1}
@@ -476,15 +476,15 @@
 %   For PDF images, properly supporting the |pagebox| concept in \XeTeX{}
 %   is best done using the |\tex_XeTeXpdffile:D| primitive. The syntax here
 %   is the same as for the image measurement part, although we know at this
-%   stage that there must be some valid setting for \cs{l_image_pagebox_tl}.
+%   stage that there must be some valid setting for \cs{l_graphics_pagebox_tl}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_graphics_include_pdf:n #1
   {
     \tex_XeTeXpdffile:D
       \@@_graphics_include_pdf_quote:w #1 "#1" \q_stop \c_space_tl
-      \int_compare:nNnT \l_image_page_int > 0
-        { page ~ \int_use:N \l_image_page_int \c_space_tl }
-        \exp_after:wN \@@_graphics_getbb_pagebox:w \l_image_pagebox_tl
+      \int_compare:nNnT \l_graphics_page_int > 0
+        { page ~ \int_use:N \l_graphics_page_int \c_space_tl }
+        \exp_after:wN \@@_graphics_getbb_pagebox:w \l_graphics_pagebox_tl
   }
 \cs_new:Npn \@@_graphics_include_pdf_quote:w #1 " #2 " #3 \q_stop
   { " #2 " }
@@ -532,8 +532,8 @@
      \@@_literal:x
        {
          dvisvgm:img~
-         \dim_to_decimal:n { \l_image_ury_dim } ~
-         \dim_to_decimal:n { \l_image_ury_dim } ~
+         \dim_to_decimal:n { \l_graphics_ury_dim } ~
+         \dim_to_decimal:n { \l_graphics_ury_dim } ~
          \@@_graphics_include_bitmap_quote:w #1 " #1 " \q_stop
        }
   }
