Some more s/image/graphics/

--- a/l3kernel/l3drivers-graphics.dtx
+++ b/l3kernel/l3drivers-graphics.dtx
@@ -75,7 +75,7 @@
 %<*package>
 \AtBeginDocument
 %</package>
-  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \image_read_bb:n }
+  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \graphicsread_bb:n }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -163,7 +163,7 @@
   }
 \cs_new_protected:Npn \@@_graphics_getbb_auxi:n #1
   {
-    \image_bb_restore:xF { #1 \l_@@_graphics_attr_tl }
+    \graphicsbb_restore:xF { #1 \l_@@_graphics_attr_tl }
       { \@@_graphics_getbb_auxii:n {#1} }
   }
 %    \begin{macrocode}
@@ -198,7 +198,7 @@
     \dim_set:Nn \l_graphics_ury_dim { \box_ht:N \l_@@_internal_box }
     \int_const:cn { c_@@_graphics_ #1 \l_@@_graphics_attr_tl _int }
       { \tex_the:D \tex_pdflastximage:D }
-    \image_bb_save:x { #1 \l_@@_graphics_attr_tl }
+    \graphicsbb_save:x { #1 \l_@@_graphics_attr_tl }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -248,20 +248,20 @@
 %<*package>
 \AtBeginDocument
 %</package>
-  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \image_read_bb:n }
+  { \cs_new_eq:NN \driver_graphics_getbb_eps:n \graphicsread_bb:n }
 %<*dvipdfmx>
 \cs_new_protected:Npn \driver_graphics_getbb_jpg:n #1
   {
     \int_zero:N \l_graphics_page_int
     \tl_clear:N \l_graphics_pagebox_tl
-    \image_extract_bb:n {#1}
+    \graphicsextract_bb:n {#1}
   }
 \cs_new_eq:NN \driver_graphics_getbb_png:n \driver_graphics_getbb_jpg:n
 \cs_new_protected:Npn \driver_graphics_getbb_pdf:n #1
   {
     \tl_clear:N \l_graphics_decodearray_tl
     \bool_set_false:N \l_graphics_interpolate_bool
-    \image_extract_bb:n {#1}
+    \graphicsextract_bb:n {#1}
   }
 %</dvipdfmx>
 %    \end{macrocode}
@@ -451,7 +451,7 @@
 \cs_generate_variant:Nn \@@_graphics_getbb_auxiv:nnNnn { V }
 \cs_new_protected:Npn \@@_graphics_getbb_auxv:nNnn #1#2#3#4
   {
-    \image_bb_restore:nF {#1#3}
+    \graphicsbb_restore:nF {#1#3}
       { \@@_graphics_getbb_auxvi:nNnn {#1} #2 {#3} {#4} }
   }
 \cs_new_protected:Npn \@@_graphics_getbb_auxvi:nNnn #1#2#3#4
@@ -459,7 +459,7 @@
     \hbox_set:Nn \l_@@_internal_box { #2 #1 ~ #4 }
     \dim_set:Nn \l_graphics_urx_dim { \box_wd:N \l_@@_internal_box }
     \dim_set:Nn \l_graphics_ury_dim { \box_ht:N \l_@@_internal_box }
-    \image_bb_save:n {#1#3}
+    \graphicsbb_save:n {#1#3}
   }
 \cs_new:Npn \@@_graphics_getbb_pagebox:w #1 box {#1}
 %    \end{macrocode}
@@ -512,8 +512,8 @@
 \AtBeginDocument
 %</package>
   {
-    \cs_new_eq:NN \driver_graphics_getbb_png:n \image_extract_bb:n
-    \cs_new_eq:NN \driver_graphics_getbb_jpg:n \image_extract_bb:n
+    \cs_new_eq:NN \driver_graphics_getbb_png:n \graphicsextract_bb:n
+    \cs_new_eq:NN \driver_graphics_getbb_jpg:n \graphicsextract_bb:n
   }
 %    \end{macrocode}
 % \end{macro}
