A few dvisvgm fixes

--- a/l3kernel/l3drivers-draw.dtx
+++ b/l3kernel/l3drivers-draw.dtx
@@ -1223,7 +1223,7 @@
 %  \texttt{dvips}. Here, we are only allowed RGB colors so there is some
 %  conversion to do.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_draw_color_stroke_cmyk:nnnn #1#2#3#4
+\cs_new_protected:Npn \driver_draw_color_fill_cmyk:nnnn #1#2#3#4
   {
     \use:x
       {
@@ -1234,18 +1234,18 @@
       }
   }
 \cs_new_eq:NN \driver_draw_color_stroke_cmyk:nnnn \driver_color_cmyk:nnnn
-\cs_new_protected:Npn \driver_draw_color_gray:n #1
+\cs_new_protected:Npn \driver_draw_color_fill_gray:n #1
   {
     \use:x
       {
         \@@_draw_color_gray_aux:n
-          { \fp_eval:n { 100 * (#3) } }
+          { \fp_eval:n { 100 * (#1) } }
       }
   }
 \cs_new_protected:Npn \@@_draw_color_gray_aux:n #1
   { \@@_draw_color_fill:nnn {#1} {#1} {#1} }
 \cs_new_eq:NN \driver_draw_color_stroke_gray:n \driver_color_gray:n
-\cs_new_protected:Npn \driver_draw_color_rgb:nnn #1#2#3
+\cs_new_protected:Npn \driver_draw_color_fill_rgb:nnn #1#2#3
   {
     \use:x
       {
