Set compress level globally

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1457,6 +1457,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npx \driver_pdf_compresslevel:n #1
   {
+    \exp_not:N \tex_global:D
     \cs_if_exist:NTF \tex_pdfcompresslevel:D
       { \tex_pdfcompresslevel:D }
       { \tex_pdfvariable:D compresslevel }
@@ -1470,6 +1471,7 @@
   }
 \cs_new_protected:Npx \@@_pdf_objcompresslevel:n #1
   {
+    \exp_not:N \tex_global:D
     \cs_if_exist:NTF \tex_pdfobjcompresslevel:D
       { \tex_pdfobjcompresslevel:D }
       { \tex_pdfvariable:D objcompresslevel }
