--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2358,8 +2358,8 @@
 %<@@=file>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_str_cmp:nn}
-% \begin{macro}{\@@_str_escape:n}
+% \begin{macro}[EXP]{\@@_str_cmp:nn}
+% \begin{macro}[EXP]{\@@_str_escape:n}
 %   As we are doing a fixed-length \enquote{big} integer comparison, it
 %   is easiest to use the low-level behavior  of string comparisons.
 %    \begin{macrocode}
@@ -2395,7 +2395,7 @@
 % \end{variable}
 %
 % \begin{macro}[TF]{\file_timestamp_compare:nNn}
-% \begin{macro}[TF]{\@@_timestamp:n}
+% \begin{macro}[EXP]{\@@_timestamp:n}
 %   Comparison of file date can be done by using the low-level nature of the
 %   string comparison functions. This could be expandable but that would
 %   skip any file look-up: to stay consistent we retain that at the cost of
