Missing mark-up

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2387,7 +2387,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{variable}
+% \begin{variable}{\l_@@_first_tl, \l_@@_second_tl}
 %    \begin{macrocode}
 \tl_new:N \l_@@_first_tl
 \tl_new:N \l_@@_second_tl
