A few stray s/image/graphics/

--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -34,7 +34,7 @@
 % \fi
 %
 % \title{^^A
-%   The \pkg{l3graphics} package\\ Image inclusion support^^A
+%   The \pkg{l3graphics} package\\ Graphics inclusion support^^A
 % }
 %
 % \author{^^A
@@ -221,7 +221,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<@@=image>
+%<@@=graphics>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
